Added longtable package

--- a/packages_formatting.tex
+++ b/packages_formatting.tex
@@ -45,6 +45,7 @@
 \usepackage{pdfpages}
 \usepackage{xcolor}
 \usepackage{makecell}
+\usepackage{longtable}
 
 % Use a referencing package
 %\usepackage{biblatex}
