--- a/packages_formatting.tex
+++ b/packages_formatting.tex
@@ -16,6 +16,16 @@
 \usepackage{caption} % Loads a function that will help shrink your list of figures and tables
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Font Packages
+% Comment out unwanted fonts
+% Default is the Computer Modern font.
+
+%\usepackage[T1]{fontenc}
+%\usepackage{mathpazo}
+%\usepackage{utopia}
+%\renewcommand*\familydefault{\sfdefault} 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Recommended packages
 % Modify as needed
 
@@ -39,13 +49,13 @@
 \usepackage{float}
 \usepackage{comment} 
 \usepackage{subcaption}
+\usepackage{longtable}
 
 \usepackage{etoolbox}
 
 \usepackage{pdfpages}
 \usepackage{xcolor}
 \usepackage{makecell}
-\usepackage{longtable}
 
 % Use a referencing package
 %\usepackage{biblatex}
@@ -100,7 +110,7 @@
 % Definitions for fancy math symbols
 \def\ones{\mathbbm{1}}
 \def\Re{\mathbb{R}}
-\def\Ze{\mathbb{Z}} 
+\def\Ze{\mathbb{Z}}
 
 
 
